--- a/src/app/ang-blog.component.html
+++ b/src/app/ang-blog.component.html
@@ -1,3 +1,24 @@
-<h1>
-  {{title}}
-</h1>
+<div class="blog-masthead">
+  <div class="container">
+    <nav class="blog-nav">
+      <a class="blog-nav-item active" [routerLink]="['/']">Home</a>
+      <a class="blog-nav-item" href="#">New features</a>
+      <a class="blog-nav-item" [routerLink]="['/posts']" >Press</a>
+      <a class="blog-nav-item" href="#">New hires</a>
+      <a class="blog-nav-item" [routerLink]="['/about']"  >About</a>
+    </nav>
+  </div>
+</div>
+<div class="container">
+  <div class="blog-header">
+    <h1 class="blog-title"> {{title}}</h1>
+    <p class="lead blog-description">{{slogan}}</p>
+  </div>
+  <div class="row">
+    <div class="col-sm-8 blog-main">
+      <router-outlet></router-outlet>
+    </div>
+    <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
+
+    </div>
+  </div>
